# daedalus-engine-rust

./: Cargo.toml  README.md
src/: main.rs  shader.wgsl
src/application/: mod.rs
src/ecs/component/: camera.rs  input.rs  mod.rs  physics.rs  transform.rs
src/ecs/entity/: scene.rs
src/input/: mod.rs
src/physics/: mod.rs
src/rendering/: camera.rs  mod.rs  vertex.rs
