[package]
name = "daedalus-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "25.0.2"
winit = "0.30"
log = "0.4.27"
env_logger = "0.11"
pollster ={version = "0.4.0", features = ["macro"]}
anyhow = "1.0.98"
dotenv = "0.15.0"
glam = "0.30.4"
bytemuck = { version = "1.23.1", features = [ "derive" ] }